[package]
name = "rizeclone"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A productivity application for process tracking and focus management"

[dependencies]
# Process tracking
sysinfo = "0.29"  # For system information and process monitoring
chrono = { version = "0.4", features = ["serde"] }    # For time handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tui = "0.19"      # Terminal UI for the CLI interface
crossterm = "0.27" # Cross-platform terminal manipulation
anyhow = "1.0"    # Error handling
log = "0.4"       # Logging
env_logger = "0.10"
dirs = "5.0"      # For finding user directories
notify = "5.1"    # For file system events

# GUI dependencies
eframe = "0.24"   # egui framework
egui = "0.24"     # Immediate mode GUI
egui_extras = { version = "0.24", features = ["image"] }
chrono-tz = "0.8" # Timezone support for calendar

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
